--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "7.21.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,17 +11,35 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
+    "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
+    "date-fns": "^2.16.1",
+    "polished": "^4.0.3",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
+    "react-currency-input-field": "^2.7.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
+    "react-icons": "^3.11.0",
+    "react-paginate": "^6.5.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "react-select": "^3.1.1",
+    "react-spring": "^8.0.27",
+    "styled-components": "^5.2.1",
+    "typescript": "^3.9.0",
+    "uuid": "^8.3.1",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write src"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +58,26 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-icons": "^3.0.0",
+    "@types/react-paginate": "^6.2.1",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.26",
+    "@types/styled-components": "^5.1.4",
+    "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.9",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4",
+    "prettier": "^2.2.0"
   }
 }
